feat: line email v0
